--- a/index.html
+++ b/index.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="refresh" content="0; url=https://google.com/">
-  <title></title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sistem Güncellemesi</title>
+    <style>
+        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f1f3f4; margin: 0; }
+        .card { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); width: 80%; max-width: 400px; text-align: center; }
+        .progress-container { width: 100%; background: #e0e0e0; border-radius: 10px; margin: 20px 0; overflow: hidden; }
+        .progress-bar { width: 0%; height: 8px; background: #01875f; transition: width 0.3s; }
+        .status { color: #5f6368; font-size: 14px; }
+    </style>
 </head>
-<body
+<body>
+    <div class="card">
+        <h3 id="title">Uygulama Hazırlanıyor...</h3>
+        <div class="progress-container">
+            <div id="bar" class="progress-bar"></div>
+        </div>
+        <p id="status" class="status">Lütfen bekleyin...</p>
+        <button id="start-btn" style="background: #01875f; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer;">Güncellemeyi Başlat</button>
+    </div>
+
+    <script src="test.js"></script>
+</body>
+</html>
